<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_Axes" Id="{87891793-e0dd-459a-a1f6-9cb6e63640c1}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	desiredTSNMapping			: BOOL := FALSE;
	activeTSNMapping			: BOOL := FALSE;
	axesStatus					: ST_AxesStatus;
	AllAxesDisabled	: BOOL;
	AllAxesEnabled	: BOOL;
	AllAxesVoltage  : BOOL;
	OneAxisError	: BOOL;

	// Drives AT
	drivestatusword_x		AT%I*	: WORD;
	drivestatusword_y		AT%I*	: WORD;
	drivestatusword_z		AT%I*	: WORD;
	drivestatusword_b		AT%I*	: WORD;
	drivestatusword_c		AT%I*	: WORD;
	drivestatusword_s		AT%I*	: WORD;
	
	positionfeedbackvalue_x	AT%I*	: DINT;
	positionfeedbackvalue_y	AT%I*	: DINT;
	positionfeedbackvalue_z	AT%I*	: DINT;
	positionfeedbackvalue_b	AT%I*	: DINT;
	positionfeedbackvalue_c	AT%I*	: DINT;
	velocityfeedbackvalue_s	AT%I*	: DINT;
	
	// Drives MDT
	mastercontrolword_x		AT%Q*	: WORD;
	mastercontrolword_y		AT%Q*	: WORD;
	mastercontrolword_z		AT%Q*	: WORD;
	mastercontrolword_b		AT%Q*	: WORD;
	mastercontrolword_c		AT%Q*	: WORD;
	mastercontrolword_s		AT%Q*	: WORD;
	
	positioncommandvalue_x	AT%Q*	: DINT;
	positioncommandvalue_y	AT%Q*	: DINT;
	positioncommandvalue_z	AT%Q*	: DINT;
	positioncommandvalue_b	AT%Q*	: DINT;
	positioncommandvalue_c	AT%Q*	: DINT;
	velocitycommandvalue_s	AT%Q*	: DINT;
	
	// CNC AT
	CNCdrivestatusword_x	AT%Q*		: WORD;
	CNCdrivestatusword_y	AT%Q*		: WORD;
	CNCdrivestatusword_z	AT%Q*		: WORD;
	CNCdrivestatusword_b	AT%Q*		: WORD;
	CNCdrivestatusword_c	AT%Q*		: WORD;
	CNCdrivestatusword_s	AT%Q*		: WORD;
	
	CNCpositionfeedbackvalue_x	AT%Q*	: DINT;
	CNCpositionfeedbackvalue_y	AT%Q*	: DINT;
	CNCpositionfeedbackvalue_z	AT%Q*	: DINT;
	CNCpositionfeedbackvalue_b	AT%Q*	: DINT;
	CNCpositionfeedbackvalue_c	AT%Q*	: DINT;
	CNCvelocityfeedbackvalue_s	AT%Q*	: DINT;
	
	// CNC MDT
	CNCmastercontrolword_x	AT%I*		: WORD;
	CNCmastercontrolword_y	AT%I*		: WORD;
	CNCmastercontrolword_z	AT%I*		: WORD;
	CNCmastercontrolword_b	AT%I*		: WORD;
	CNCmastercontrolword_c	AT%I*		: WORD;
	CNCmastercontrolword_s	AT%I*		: WORD;
	
	CNCpositioncommandvalue_x	AT%I*	: DINT;
	CNCpositioncommandvalue_y	AT%I*	: DINT;
	CNCpositioncommandvalue_z	AT%I*	: DINT;
	CNCpositioncommandvalue_b	AT%I*	: DINT;
	CNCpositioncommandvalue_c	AT%I*	: DINT;
	CNCvelocitycommandvalue_s	AT%I*	: DINT;	

	// TSN AT
	TSNdrivestatusword_x		AT%Q*	: WORD;
	TSNdrivestatusword_y		AT%Q*	: WORD;
	TSNdrivestatusword_z		AT%Q*	: WORD;
	TSNdrivestatusword_b		AT%Q*	: WORD;
	TSNdrivestatusword_c		AT%Q*	: WORD;
	TSNdrivestatusword_s		AT%Q*	: WORD;
	
	TSNpositionfeedbackvalue_x	AT%Q*	: DINT;
	TSNpositionfeedbackvalue_y	AT%Q*	: DINT;
	TSNpositionfeedbackvalue_z	AT%Q*	: DINT;
	TSNpositionfeedbackvalue_b	AT%Q*	: DINT;
	TSNpositionfeedbackvalue_c	AT%Q*	: DINT;
	TSNvelocityfeedbackvalue_s	AT%Q*	: DINT;
	
	// TSN MDT
	TSNmastercontrolword_x	AT%I*		: WORD;
	TSNmastercontrolword_y	AT%I*		: WORD;
	TSNmastercontrolword_z	AT%I*		: WORD;
	TSNmastercontrolword_b	AT%I*		: WORD;
	TSNmastercontrolword_c	AT%I*		: WORD;
	TSNmastercontrolword_s	AT%I*		: WORD;
	
	TSNpositioncommandvalue_x	AT%I*	: DINT;
	TSNpositioncommandvalue_y	AT%I*	: DINT;
	TSNpositioncommandvalue_z	AT%I*	: DINT;
	TSNpositioncommandvalue_b	AT%I*	: DINT;
	TSNpositioncommandvalue_c	AT%I*	: DINT;
	TSNvelocitycommandvalue_s	AT%I*	: DINT;
	
	
	CNCpositionfeedbackvalue_s: INT;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>