<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="TSNAxesMapping" Id="{4a6a05cf-1984-4adc-ad05-1e01d858cacc}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM TSNAxesMapping
VAR
	{attribute 'OPC.UA.DA' := '1'}
	fb_ax : FB_Axes;
	
	//alldisabled 		: FB_AxisDisabled;
	
	
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//alldisabled();
fb_ax();
//FB_EnableAllAxis();

IF GVL_Axes.AllAxesDisabled THEN
	GVL_Axes.activeTSNMapping := GVL_Axes.desiredTSNMapping;
END_IF


	
GVL_Axes.TSNdrivestatusword_x 		:= GVL_Axes.drivestatusword_x;
GVL_Axes.TSNdrivestatusword_y 		:= GVL_Axes.drivestatusword_y;
GVL_Axes.TSNdrivestatusword_z 		:= GVL_Axes.drivestatusword_z;
GVL_Axes.TSNdrivestatusword_b 		:= GVL_Axes.drivestatusword_b;
GVL_Axes.TSNdrivestatusword_c 		:= GVL_Axes.drivestatusword_c;
GVL_Axes.TSNdrivestatusword_s 		:= GVL_Axes.drivestatusword_s;	
	
GVL_Axes.TSNpositionfeedbackvalue_x	:= GVL_Axes.positionfeedbackvalue_x;
GVL_Axes.TSNpositionfeedbackvalue_y	:= GVL_Axes.positionfeedbackvalue_y;
GVL_Axes.TSNpositionfeedbackvalue_z	:= GVL_Axes.positionfeedbackvalue_z;
GVL_Axes.TSNpositionfeedbackvalue_b	:= GVL_Axes.positionfeedbackvalue_b;
GVL_Axes.TSNpositionfeedbackvalue_c	:= GVL_Axes.positionfeedbackvalue_c;
GVL_Axes.TSNvelocityfeedbackvalue_s	:= GVL_Axes.velocityfeedbackvalue_s;	
	
IF GVL_Axes.activeTSNMapping = FALSE THEN
	

	GVL_Axes.CNCdrivestatusword_x 		:= GVL_Axes.drivestatusword_x;
	GVL_Axes.CNCdrivestatusword_y 		:= GVL_Axes.drivestatusword_y;
	GVL_Axes.CNCdrivestatusword_z 		:= GVL_Axes.drivestatusword_z;
	GVL_Axes.CNCdrivestatusword_b 		:= GVL_Axes.drivestatusword_b;
	GVL_Axes.CNCdrivestatusword_c 		:= GVL_Axes.drivestatusword_c;
	GVL_Axes.CNCdrivestatusword_s 		:= GVL_Axes.drivestatusword_s;	

	GVL_Axes.CNCpositionfeedbackvalue_x	:= GVL_Axes.positionfeedbackvalue_x;
	GVL_Axes.CNCpositionfeedbackvalue_y	:= GVL_Axes.positionfeedbackvalue_y;
	GVL_Axes.CNCpositionfeedbackvalue_z	:= GVL_Axes.positionfeedbackvalue_z;
	GVL_Axes.CNCpositionfeedbackvalue_b	:= GVL_Axes.positionfeedbackvalue_b;
	GVL_Axes.CNCpositionfeedbackvalue_c	:= GVL_Axes.positionfeedbackvalue_c;
	GVL_Axes.CNCvelocityfeedbackvalue_s	:= GVL_Axes.velocityfeedbackvalue_s;

	GVL_Axes.mastercontrolword_x 		:= GVL_Axes.CNCmastercontrolword_x;
	GVL_Axes.mastercontrolword_y 		:= GVL_Axes.CNCmastercontrolword_y;
	GVL_Axes.mastercontrolword_z 		:= GVL_Axes.CNCmastercontrolword_z;
	GVL_Axes.mastercontrolword_b 		:= GVL_Axes.CNCmastercontrolword_b;
	GVL_Axes.mastercontrolword_c 		:= GVL_Axes.CNCmastercontrolword_c;
	GVL_Axes.mastercontrolword_s 		:= GVL_Axes.CNCmastercontrolword_s;

	GVL_Axes.positioncommandvalue_x		:= GVL_Axes.CNCpositioncommandvalue_x;
	GVL_Axes.positioncommandvalue_y		:= GVL_Axes.CNCpositioncommandvalue_y;
	GVL_Axes.positioncommandvalue_z		:= GVL_Axes.CNCpositioncommandvalue_z;
	GVL_Axes.positioncommandvalue_b		:= GVL_Axes.CNCpositioncommandvalue_b;
	GVL_Axes.positioncommandvalue_c		:= GVL_Axes.CNCpositioncommandvalue_c;
	GVL_Axes.velocitycommandvalue_s		:= GVL_Axes.CNCvelocitycommandvalue_s;

ELSE

	GVL_Axes.mastercontrolword_x 		:= GVL_Axes.TSNmastercontrolword_x;
	GVL_Axes.mastercontrolword_y 		:= GVL_Axes.TSNmastercontrolword_y;
	GVL_Axes.mastercontrolword_z 		:= GVL_Axes.TSNmastercontrolword_z;
	GVL_Axes.mastercontrolword_b 		:= GVL_Axes.TSNmastercontrolword_b;
	GVL_Axes.mastercontrolword_c 		:= GVL_Axes.TSNmastercontrolword_c;
	GVL_Axes.mastercontrolword_s 		:= GVL_Axes.TSNmastercontrolword_s;
	
	GVL_Axes.positioncommandvalue_x		:= GVL_Axes.TSNpositioncommandvalue_x;
	GVL_Axes.positioncommandvalue_y		:= GVL_Axes.TSNpositioncommandvalue_y;
	GVL_Axes.positioncommandvalue_z		:= GVL_Axes.TSNpositioncommandvalue_z;
	GVL_Axes.positioncommandvalue_b		:= GVL_Axes.TSNpositioncommandvalue_b;
	GVL_Axes.positioncommandvalue_c		:= GVL_Axes.TSNpositioncommandvalue_c;
	GVL_Axes.velocitycommandvalue_s		:= GVL_Axes.TSNvelocitycommandvalue_s;
	
END_IF]]></ST>
    </Implementation>
    <LineIds Name="TSNAxesMapping">
      <LineId Id="134" Count="0" />
      <LineId Id="185" Count="0" />
      <LineId Id="167" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="119" Count="0" />
      <LineId Id="122" Count="1" />
      <LineId Id="90" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="107" Count="5" />
      <LineId Id="89" Count="0" />
      <LineId Id="113" Count="5" />
      <LineId Id="105" Count="1" />
      <LineId Id="5" Count="0" />
      <LineId Id="156" Count="1" />
      <LineId Id="140" Count="11" />
      <LineId Id="139" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="33" Count="4" />
      <LineId Id="20" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="38" Count="4" />
      <LineId Id="13" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="56" Count="6" />
      <LineId Id="80" Count="0" />
      <LineId Id="64" Count="4" />
      <LineId Id="22" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>